[gd_scene load_steps=15 format=3 uid="uid://defuaijvpgkhn"]

[ext_resource type="Script" uid="uid://od1jienr37dl" path="res://scenes/main_menu/settings/settings_video.gd" id="1_wsyhu"]
[ext_resource type="LabelSettings" uid="uid://lo2b2eogk1jn" path="res://assets/themes/title_label_settings.tres" id="2_0fpak"]
[ext_resource type="Script" uid="uid://cxxp1bfw3sldw" path="res://scenes/main_menu/settings/settings_world_appareance.gd" id="2_tonjr"]
[ext_resource type="Texture2D" uid="uid://ql8v8tau18u1" path="res://assets/images/icons/checkbox_checked.svg" id="3_ct4oh"]
[ext_resource type="Texture2D" uid="uid://dpwdl2106eu1o" path="res://assets/default_data/custom_resources/world_textures/checkerboard.png" id="4_rr6tq"]
[ext_resource type="FontVariation" uid="uid://dqqgwyrbx48ds" path="res://assets/fonts/inter_bold.tres" id="4_ryila"]
[ext_resource type="PackedScene" uid="uid://db0ivgs28q5rr" path="res://scenes/main_menu/settings/slider_setting.tscn" id="4_srsku"]

[sub_resource type="LabelSettings" id="LabelSettings_0fpak"]
font = ExtResource("4_ryila")
font_size = 24
font_color = Color(0.69803923, 0.87058824, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1yvei"]

[sub_resource type="ImageTexture" id="ImageTexture_vtpo4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bheco"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.160784, 0.160784, 0.160784, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ydstq"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.160784, 0.160784, 0.160784, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p1fy7"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.160784, 0.160784, 0.160784, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_og8m1"]
Button/styles/normal = SubResource("StyleBoxFlat_1yvei")
CheckBox/icons/checked = ExtResource("3_ct4oh")
CheckBox/icons/unchecked = SubResource("ImageTexture_vtpo4")
CheckBox/styles/focus = SubResource("StyleBoxFlat_bheco")
CheckBox/styles/hover = SubResource("StyleBoxFlat_bheco")
CheckBox/styles/hover_pressed = SubResource("StyleBoxFlat_bheco")
CheckBox/styles/normal = SubResource("StyleBoxFlat_bheco")
CheckBox/styles/pressed = SubResource("StyleBoxFlat_bheco")
ColorPickerButton/styles/normal = SubResource("StyleBoxFlat_ydstq")
Label/font_sizes/font_size = 22
LineEdit/styles/normal = SubResource("StyleBoxFlat_p1fy7")

[node name="Video" type="VBoxContainer"]
offset_right = 325.0
offset_bottom = 464.0
script = ExtResource("1_wsyhu")

[node name="Title" type="Label" parent="."]
layout_mode = 2
text = "Video"
label_settings = ExtResource("2_0fpak")
vertical_alignment = 1

[node name="Margin" type="Control" parent="."]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2

[node name="Resolution" parent="." instance=ExtResource("4_srsku")]
layout_mode = 2
label_text = "Resolution"
tooltip = "Resolution in which the 3D world will be rendered."
save_this_setting = true
settings_category = "video"
settings_slider_id = "resolution"
min_value = 10.0
value = 100.0
step = 5.0
suffix = "%"
has_checkbox = false

[node name="CameraFov" parent="." instance=ExtResource("4_srsku")]
layout_mode = 2
label_text = "Camera Fov"
tooltip = "Extent of the observable world captured by the camera."
save_this_setting = true
settings_category = "video"
settings_slider_id = "fov"
max_value = 120.0
min_value = 30.0
value = 120.0
step = 1.0
suffix = "ยบ"
has_checkbox = false

[node name="FPSLimit" parent="." instance=ExtResource("4_srsku")]
layout_mode = 2
label_text = "FPS limit"
save_this_setting = true
settings_category = "video"
settings_slider_id = "fps_limit"
max_value = 360.0
min_value = 30.0
value = 120.0
step = 1.0
suffix = "FPS"
has_checkbox = false

[node name="WindowModeLabel" type="Label" parent="."]
layout_mode = 2
text = "Window mode"

[node name="WindowModeOptions" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "fullscreen"
popup/item_0/id = 1
popup/item_1/text = "windowed"
popup/item_1/id = 1

[node name="FPSOverlay" parent="." instance=ExtResource("4_srsku")]
layout_mode = 2
label_text = "FPS Overlay"
tooltip = "On enabled, a text showing the current FPS will appear on screen."
save_this_setting = true
settings_category = "user"
settings_checkbox_id = "fps_overlay"
has_slider = false

[node name="WorldAppareance" type="VBoxContainer" parent="."]
layout_mode = 2
script = ExtResource("2_tonjr")

[node name="WorldAppareanceLabel" type="Label" parent="WorldAppareance"]
layout_mode = 2
text = "
World appareance"
label_settings = SubResource("LabelSettings_0fpak")

[node name="TargetColor" type="HBoxContainer" parent="WorldAppareance"]
layout_mode = 2

[node name="Label" type="Label" parent="WorldAppareance/TargetColor"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The color of the targets you shoot at"
mouse_filter = 1
mouse_default_cursor_shape = 16
text = "Targets color"

[node name="TargetColor" type="ColorPickerButton" parent="WorldAppareance/TargetColor" groups=["Persist", "PutLabel"]]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme = SubResource("Theme_og8m1")
color = Color(1, 0.74902, 0, 1)

[node name="AmbientColor" type="HBoxContainer" parent="WorldAppareance"]
layout_mode = 2

[node name="Label" type="Label" parent="WorldAppareance/AmbientColor"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The color of the ambient and the sky"
mouse_filter = 1
mouse_default_cursor_shape = 16
text = "Ambient color"

[node name="Color" type="ColorPickerButton" parent="WorldAppareance/AmbientColor" groups=["Persist", "PutLabel"]]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme = SubResource("Theme_og8m1")
color = Color(0.06666667, 0.12941177, 0.22745098, 1)
edit_alpha = false

[node name="WorldColor" type="HBoxContainer" parent="WorldAppareance"]
layout_mode = 2

[node name="Label" type="Label" parent="WorldAppareance/WorldColor"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The color of the world around you"
mouse_filter = 1
mouse_default_cursor_shape = 16
text = "World color"

[node name="Color" type="ColorPickerButton" parent="WorldAppareance/WorldColor" groups=["Persist", "PutLabel"]]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme = SubResource("Theme_og8m1")
color = Color(0.360784, 0.615686, 1, 1)

[node name="Label" type="Label" parent="WorldAppareance"]
layout_mode = 2
tooltip_text = "The texture of the world around you"
mouse_filter = 1
mouse_default_cursor_shape = 16
text = "World texture"

[node name="WorldTexture" type="OptionButton" parent="WorldAppareance"]
layout_mode = 2
expand_icon = true

[node name="Preview" type="TextureRect" parent="WorldAppareance"]
self_modulate = Color(0.360784, 0.615686, 1, 1)
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
texture = ExtResource("4_rr6tq")
stretch_mode = 1

[node name="TargetPreview" type="ColorRect" parent="WorldAppareance/Preview"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.74902, 0, 1)

[connection signal="item_selected" from="WindowModeOptions" to="." method="_on_window_mode_options_item_selected"]
[connection signal="color_changed" from="WorldAppareance/TargetColor/TargetColor" to="WorldAppareance" method="_on_target_color_color_changed"]
[connection signal="color_changed" from="WorldAppareance/AmbientColor/Color" to="WorldAppareance" method="_on_amient_color_changed"]
[connection signal="color_changed" from="WorldAppareance/WorldColor/Color" to="WorldAppareance" method="_on_color_color_changed"]
[connection signal="item_selected" from="WorldAppareance/WorldTexture" to="WorldAppareance" method="_on_world_texture_item_selected"]
